// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render an inline element 1`] = `
<View>
  <Text>
    Lindsay McIntosh Scottish Political Editor
  </Text>
</View>
`;

exports[`2. Render an author first 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
    , Environment Editor
  </Text>
</View>
`;

exports[`3. Render an author last 1`] = `
<View>
  <Text>
    RBS Six Nations 
  </Text>
  <Text>
    Mike Atherton
  </Text>
</View>
`;

exports[`4. Render multiple authors separated by commas 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
    , 
  </Text>
  <Text>
    Mike Atherton
  </Text>
  <Text>
    , 
  </Text>
  <Text>
    Alexandra Frean
  </Text>
</View>
`;

exports[`5. Render multiple authors separated by spaces 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
     
  </Text>
  <Text>
    Mike Atherton
  </Text>
  <Text>
     
  </Text>
  <Text>
    Alexandra Frean
  </Text>
</View>
`;

exports[`6. Render null when AST is empty 1`] = `null`;
